--- a/index.html
+++ b/index.html
@@ -7,7 +7,43 @@
     <link rel="stylesheet" href="./css/style.css" />
     <title>Slider</title>
   </head>
+  <main>
+    <div class="container">
+      <div class="carousel">
+        <ul class="carousel__wrapper">
+          <li class="carousel__slide carousel-slide--active">
+            <img src="./img/01.jpg" alt="Prima Immagine" />
+          </li>
+          <li class="carousel__slide">
+            <img src="./img/02.jpg" alt="Seconda Immagine" />
+          </li>
+          <li class="carousel__slide">
+            <img src="./img/03.jpg" alt="Terza Immagine" />
+          </li>
+          <li class="carousel__slide">
+            <img src="./img/04.jpg" alt="Quarta Immagine" />
+          </li>
+          <li class="carousel__slide">
+            <img src="./img/05.jpg" alt="Quinta Immagine" />
+          </li>
+        </ul>
+
+        <div class="carousel__arrows">
+          <span class="carousel__arrow carousel__arrow--prev">
+            <i class="fa-solid fa-arrow-left"></i>
+          </span>
+          <span class="carousel__arrow carousel__arrow--next">
+            <i class="fa-solid fa-arrow-right"></i>
+          </span>
+        </div>
+      </div>
+    </div>
+  </main>
   <body>
+    <script
+      src="https://kit.fontawesome.com/a1b97f2018.js"
+      crossorigin="anonymous"
+    ></script>
     <script src="./js/app.js"></script>
   </body>
 </html>
