--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
       <div class="carousel">
         <ul class="carousel__wrapper">
-          <li class="carousel__slide carousel-slide--active">
+          <!-- <li class="carousel__slide carousel-slide--active">
             <img src="./img/01.jpg" alt="Prima Immagine" />
           </li>
           <li class="carousel__slide">
@@ -25,7 +25,7 @@
           </li>
           <li class="carousel__slide">
             <img src="./img/05.jpg" alt="Quinta Immagine" />
-          </li>
+          </li> -->
         </ul>
 
         <div class="carousel__arrows">
