bonus2 (add circles)

--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
             <i class="fa-solid fa-arrow-right"></i>
           </span>
         </div>
+
+        <div class="carousel__pagination"></div>
       </div>
     </div>
   </main>
